# hispanie_event_card

./: README.md  event_card_generator.py  pyproject.toml  requirements.txt
hipanie_event_card/: event_card_generator.py  find_common_events.py  main.py  motivation_card_generator.py  story_event_card_generator.py  story_motivation_card_generator.py  weather_service.py  weekly_motivation_card_generator.py
hipanie_event_card/input/: events.json
input/: events.json
